# Fastly-Guardrails

./: .gitignore  README.md  WIZARD_README.md  fastly_guardrails  fastly_guardrails_bootstrap  pyproject.toml
app_src/: README.md  pyproject.toml
app_src/fastly_guardrails/: __init__.py  cli.py  detectors.py  grouping.py  models.py  registry.py  reporter.py  reporting.py  scanner.py  scoring.py
app_src/fastly_guardrails/detectors/custom/: sec001.py  sec002.py
app_src/fastly_guardrails/engine/: grouping.py  registry.py  signal_engine.py
app_src/fastly_guardrails/generator/: __init__.py  preview.py  test_builder.py  wizard.py  writer.py
app_src/tests/: test_generator.py  test_templates.py
app_src/tests/fixtures/sample_repo/services/account/: edge.vcl
app_src/tests/fixtures/sample_repo/services/checkout/: main.tf
src/fastly_guardrails/: cli.py  reporting.py  testing.py  utils.py
src/fastly_guardrails.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fastly_guardrails/data/: signals.json
src/fastly_guardrails/engine/: registry.py  templates.py  validation.py
src/fastly_guardrails/generator/: manifest_builder.py  preview.py  wizard.py
tests/: conftest.py  test_generator.py  test_grouping.py  test_scan.py
tests/fixtures/sample_repo/: README.md
tests/fixtures/sample_repo/services/account/: main.tf
tests/fixtures/sample_repo/services/checkout/: edge.vcl
