[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastly-guardrails"
version = "1.0.0"
description = "Heuristic Fastly safety scanner for Terraform and VCL"
requires-python = ">=3.9"

[project.scripts]
fastly_guardrails = "fastly_guardrails.cli:main"

[project.optional-dependencies]
report = ["reportlab>=4,<5"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastly_guardrails = ["data/*.json"]
